--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,198 @@ body::-webkit-scrollbar {
   display: none;
 }
 
+#PageAnimation {
+  pointer-events: none;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(./assets/img/BackgroundDark.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 4;
+
+  &.Show {
+    animation: PageAnimation 0.5s;
+    opacity: 0;
+
+    @keyframes PageAnimation {
+      0% {
+        opacity: 1;
+      }
+
+      99% {
+        opacity: 0;
+      }
+      99% {
+        opacity: 0;
+      }
+    }
+  }
+
+  #Galaxy {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    overflow: hidden;
+    z-index: -1;
+
+    img {
+      display: none;
+    }
+    #CvBtt {
+      display: none;
+    }
+
+    svg {
+      .st0 {
+        fill: $Spot;
+      }
+      .st1 {
+        fill: $Spot;
+      }
+      .st2 {
+        fill: $Spot;
+      }
+      .st3 {
+        fill: $Spot;
+      }
+      .st4 {
+        fill: $Spot;
+      }
+
+      scale: 110%;
+      z-index: -1;
+
+      #GroupGroupEarth3 {
+        animation: Spin 40s infinite linear;
+        transform-origin: center;
+      }
+
+      #GroupEarth3 {
+        animation: Spin 10s infinite linear;
+        transform-origin: center;
+        transform-box: fill-box;
+      }
+
+      #Ring1 {
+        animation: SpinR 30s infinite linear;
+        transform-origin: center;
+        transform-box: fill-box;
+      }
+
+      #Ring2 {
+        animation: Spin 30s infinite linear;
+        transform-origin: center;
+        transform-box: fill-box;
+      }
+
+      #Ring3 {
+        animation: SpinR 30s infinite linear;
+        transform-origin: center;
+        transform-box: fill-box;
+      }
+
+      #Ring4 {
+        animation: Spin 30s infinite linear;
+        transform-origin: center;
+        transform-box: fill-box;
+      }
+
+      #Ring5 {
+        animation: SpinR 30s infinite linear;
+        transform-origin: center;
+        transform-box: fill-box;
+      }
+
+      #Ring6 {
+        animation: Spin 30s infinite linear;
+        transform-origin: center;
+        transform-box: fill-box;
+      }
+
+      #GroupEarth2 {
+        animation: Spin 40s infinite linear;
+        transform-origin: center;
+      }
+
+      #GroupPluto1 {
+        animation: Spin 30s infinite linear;
+        transform-origin: center;
+      }
+
+      #GroupPluto2 {
+        animation: Spin 30s infinite linear;
+        transform-origin: center;
+      }
+
+      #DarkHole1 {
+        animation: SpinR 30s infinite linear;
+        transform-origin: center;
+      }
+
+      #DarkHole2 {
+        animation: SpinR 30s infinite linear;
+        transform-origin: center;
+      }
+    }
+
+    @keyframes Spin {
+      from {
+        transform: rotateZ(0deg);
+      }
+
+      to {
+        transform: rotateZ(360deg);
+      }
+    }
+
+    @keyframes SpinR {
+      from {
+        transform: rotateZ(0deg);
+      }
+
+      to {
+        transform: rotateZ(-360deg);
+      }
+    }
+  }
+
+  #Title {
+    width: 20vw;
+
+    .st0 {
+      fill: $Spot;
+      mix-blend-mode: difference;
+    }
+    .st1 {
+      fill: $Spot;
+      mix-blend-mode: difference;
+    }
+    .st4 {
+      fill: $Spot;
+      mix-blend-mode: difference;
+    }
+    .st5 {
+      fill: $Spot;
+      mix-blend-mode: difference;
+    }
+    .st9 {
+      path {
+        fill: $SpotDark;
+        mix-blend-mode: difference;
+      }
+    }
+  }
+}
+
 header {
   width: 100%;
   display: flex;
@@ -42,10 +234,10 @@ header {
       mix-blend-mode: difference;
     }
     .st1 {
-      fill: #1e301e;
+      fill: $DarkGreen;
     }
     .st4 {
-      fill: #1e301e;
+      fill: $DarkGreen;
     }
     .st5 {
       fill: $Spot;
@@ -80,7 +272,6 @@ header {
           &:hover + .Hand,
           &.Active + .Hand {
             top: -65%;
-            animation: Shake 1s 0.2s ease-in-out infinite alternate;
           }
         }
         .Hand {
@@ -89,16 +280,18 @@ header {
           position: absolute;
           top: -150%;
           left: 50%;
-          transform: translate(-50%);
+          transform: translate(-50%, 0px);
           transition: 0.1s ease-in-out;
-        }
-        @keyframes Shake {
-          from {
-            transform: translateY(-50%, 0px);
-          }
+          animation: Shake 1s 0.2s ease-in-out infinite alternate;
 
-          to {
-            transform: translateY(-50%, 3px);
+          @keyframes Shake {
+            from {
+              transform: translate(-50%, 0px);
+            }
+
+            to {
+              transform: translate(-50%, 3px);
+            }
           }
         }
       }
@@ -375,6 +568,7 @@ h5 {
       font-size: 2vw;
       text-align: center;
       color: rgba(128, 128, 128, 0.357);
+      text-transform: uppercase;
     }
     p,
     i {
@@ -859,7 +1053,6 @@ h5 {
           background-color: white;
           color: black;
           font-size: 0.6vw;
-
           &::placeholder {
             text-transform: capitalize;
             font-size: 0.6vw;
@@ -946,20 +1139,20 @@ h5 {
           width: 0vw;
           height: 0vw;
           border-radius: 50%;
-          animation: pulse 1s 1.5s ease-out;
+          animation: pulse 1s 1s ease-out ;
         }
         div:nth-child(2) {
-          animation: pulse 1s 1.8s ease-out;
+          animation: pulse 1s 1.2s ease-out;
         }
         @keyframes pulse {
           0% {
-            outline: 1vw solid $Spot;
+            outline: 1vw solid #ffc83d;
             opacity: 100%;
             width: 2px;
             height: 2px;
           }
           100% {
-            outline: 10vw solid $Spot;
+            outline: 10vw solid #ffc83d;
             width: 40vw;
             height: 40vw;
             opacity: 0;
@@ -967,37 +1160,29 @@ h5 {
         }
 
         p {
-          top: 30vw;
-          left: 7vw;
+          top: 7vw;
+          left: 8vw;
+          transform: rotateZ(0deg) scale(110%);
           pointer-events: none;
           position: absolute;
           font-size: 10vw;
-          animation: PopUp 2s ease-in-out;
+          animation: PopUp 1s ease-in-out ;
         }
         @keyframes PopUp {
           0% {
             top: 30vw;
             transform: rotateZ(0deg);
-            display: none;
           }
 
-          15% {
-            transform: rotateZ(0deg) scale(110%);
-          }
-
-          40% {
-            top: 5vw;
-            left: 6vw;
-            transform: rotateZ(-30deg) scale(110%);
-          }
           50% {
-            left: 6vw;
-            transform: rotateZ(-30deg) scale(110%);
-          }
-
-          90% {
             left: 8vw;
             transform: rotateZ(0deg) scale(110%);
+          }
+
+          80% {
+            top: 3vw;
+            left: 4vw;
+            transform: rotateZ(-40deg) scale(110%);
           }
 
           100% {
