--- a/src/App.scss
+++ b/src/App.scss
@@ -228,7 +228,7 @@ header {
   display: flex;
   padding-top: 2vw;
   z-index: 9999999;
-  &.true {
+  &.HomePage {
     .st0 {
       fill: $Spot;
       mix-blend-mode: difference;
@@ -991,7 +991,6 @@ h5 {
         }
       }
     }
-
     form {
       padding-top: 3vw;
       display: flex;
@@ -1139,7 +1138,7 @@ h5 {
           width: 0vw;
           height: 0vw;
           border-radius: 50%;
-          animation: pulse 1s 1s ease-out ;
+          animation: pulse 1s 1s ease-out;
         }
         div:nth-child(2) {
           animation: pulse 1s 1.2s ease-out;
@@ -1166,7 +1165,7 @@ h5 {
           pointer-events: none;
           position: absolute;
           font-size: 10vw;
-          animation: PopUp 1s ease-in-out ;
+          animation: PopUp 1s ease-in-out;
         }
         @keyframes PopUp {
           0% {
@@ -1192,6 +1191,43 @@ h5 {
           }
         }
       }
+    }
+  }
+}
+#Error {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    #Typewriter {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 3vw;
+
+      .Typewriter{
+        span:nth-child(1){
+          color: $Bread;
+          font-weight: bold;
+        }
+        span:nth-child(2){
+          color: $Green;
+          font-weight: bold;
+        }
+      }
+
+    }
+    .Typewriter_cursor::selection {
+      background-color: red;
+      color: red;
     }
   }
 }
