--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,9 @@ html {
 body::-webkit-scrollbar {
   display: none;
 }
+body.modal-open {
+  overflow: hidden;
+}
 
 h5 {
   font-size: 5vw;
@@ -566,6 +569,106 @@ header {
     }
   }
 
+  #Modal {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.319);
+    top: 0vw;
+    width: 100vw;
+    height: 100vh;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      height: 90%;
+    }
+
+    $button-size: 40px;
+    $close-width: ($button-size / 10);
+
+    .close-button {
+      top: 2vw;
+      right: 2vw;
+      position: absolute;
+      width: $button-size;
+      height: $button-size;
+      overflow: hidden;
+      > div {
+        position: relative;
+      }
+      &-block {
+        width: 40px;
+        height: 20px;
+        position: relative;
+        overflow: hidden;
+        &:before,
+        &:after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: calc(55% - 4px);
+          display: block;
+          width: 4px;
+          height: 25px;
+          transform-origin: bottom center;
+          background: $Spot;
+          transition: all ease-out 280ms;
+        }
+        &:last-of-type {
+          transform: rotate(180deg);
+        }
+      }
+      .in {
+        .close-button-block {
+          &:before {
+            transition-delay: 280ms;
+            transform: translateX(20px) translateY(-20px) rotate(45deg);
+          }
+          &:after {
+            transition-delay: 280ms;
+            transform: translateX(-22px) translateY(-22px) rotate(-45deg);
+          }
+        }
+      }
+      .out {
+        position: absolute;
+        top: 0;
+        left: 0;
+        .close-button-block {
+          &:before {
+            transform: translateX(-5px) translateY(5px) rotate(45deg);
+          }
+          &:after {
+            transform: translateX(5px) translateY(5px) rotate(-45deg);
+          }
+        }
+      }
+      &:hover {
+        .in {
+          .close-button-block {
+            &:before {
+              transform: translateX(-5px) translateY(5px) rotate(45deg);
+            }
+            &:after {
+              transform: translateX(5px) translateY(5px) rotate(-45deg);
+            }
+          }
+        }
+        .out {
+          .close-button-block {
+            &:before {
+              transform: translateX(-20px) translateY(20px) rotate(45deg);
+            }
+            &:after {
+              transform: translateX(20px) translateY(20px) rotate(-45deg);
+            }
+          }
+        }
+      }
+    }
+  }
+
   main {
     overflow: hidden;
     background-color: rgba(255, 255, 255, 0.854);
@@ -608,13 +711,13 @@ header {
       .Apps {
         display: flex;
         gap: 0.5vw;
-        padding: 0.5vw 0 1.5vw;
+        padding: 1vw 0 1.5vw;
         li {
           height: 0;
           list-style: none;
           padding: 0;
           img {
-            width: 1.5vw;
+            width: 1.2vw;
             border-radius: 5px;
           }
         }
@@ -633,11 +736,22 @@ header {
         li,
         b {
           color: $Bread;
-          padding-top: 0.5vw;
-          font-size: 1vw;
+          padding-top: 1vw;
+          font-size: 0.8vw;
         }
         li {
           list-style: disc inside;
+          text-transform: capitalize;
+        }
+      }
+      #Grid {
+        padding: 2vw 1vw;
+        display: grid;
+        gap: 0.5vw;
+        grid-template-columns: 1fr 1fr 1fr;
+        img {
+          width: 100%;
+          cursor: pointer;
         }
       }
     }
