--- a/src/App.scss
+++ b/src/App.scss
@@ -1829,112 +1829,7 @@ header {
         top: 0vw;
       }
     }
-  
-    #Modal {
-      position: fixed;
-      background-color: rgba(0, 0, 0, 0.445);
-      top: 0vw;
-      width: 100vw;
-      height: 100vh;
-      z-index: 3;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      opacity: hidden;
-  
-      .HighlightImgW {
-        height: 10%;
-      }
-      .HighlightImgH {
-        height: 20%;
-      }
-  
-      $button-size: 40px;
-      $close-width: ($button-size / 10);
-  
-      .close-button {
-        top: 3vw;
-        right: 20vw;
-        position: absolute;
-        width: $button-size;
-        height: $button-size;
-        overflow: hidden;
-        cursor: pointer;
-        > div {
-          position: relative;
-        }
-        &-block {
-          width: 40px;
-          height: 20px;
-          position: relative;
-          overflow: hidden;
-          &:before,
-          &:after {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            left: calc(55% - 4px);
-            display: block;
-            width: 4px;
-            height: 25px;
-            transform-origin: bottom center;
-            background: black;
-            transition: all ease-out 280ms;
-          }
-          &:last-of-type {
-            transform: rotate(180deg);
-          }
-        }
-        .in {
-          .close-button-block {
-            &:before {
-              transition-delay: 280ms;
-              transform: translateX(20px) translateY(-20px) rotate(45deg);
-            }
-            &:after {
-              transition-delay: 280ms;
-              transform: translateX(-22px) translateY(-22px) rotate(-45deg);
-            }
-          }
-        }
-        .out {
-          position: absolute;
-          top: 0;
-          left: 0;
-          .close-button-block {
-            &:before {
-              transform: translateX(-5px) translateY(5px) rotate(45deg);
-            }
-            &:after {
-              transform: translateX(5px) translateY(5px) rotate(-45deg);
-            }
-          }
-        }
-        &:hover {
-          .in {
-            .close-button-block {
-              &:before {
-                transform: translateX(-5px) translateY(5px) rotate(45deg);
-              }
-              &:after {
-                transform: translateX(5px) translateY(5px) rotate(-45deg);
-              }
-            }
-          }
-          .out {
-            .close-button-block {
-              &:before {
-                transform: translateX(-20px) translateY(20px) rotate(45deg);
-              }
-              &:after {
-                transform: translateX(20px) translateY(20px) rotate(-45deg);
-              }
-            }
-          }
-        }
-      }
-    }
-  
+    
     main {
       overflow: hidden;
       background-color: rgba(255, 255, 255, 0.854);
@@ -1950,7 +1845,7 @@ header {
   
       h1 {
         font-size: 7vw;
-        padding-top: 2vw;
+        padding-top: 5vw;
         text-align: center;
         color: rgba(128, 128, 128, 0.357);
         text-transform: uppercase;
@@ -1963,40 +1858,37 @@ header {
       }
   
       article {
-        padding: 2vw 4vw;
+        padding: 5vw 4vw;
         display: flex;
         flex-direction: column;
-        gap: 2vw;
+        gap: 7vw;
         h3,
         h4 {
           text-transform: uppercase;
-          font-size: 1vw;
+          font-size: 5vw;
           color: rgba(128, 128, 128, 0.357);
         }
         hr {
-          width: 2.5vw;
-          border-top: solid 0.2vw $Green;
-          margin-bottom: 1vw;
+          width: 10vw;
+          border-top: solid 1vw $Green;
+          margin-bottom: 3vw;
         }
   
         .Apps {
           display: flex;
-          gap: 0.5vw;
-          padding: 0vw 0 1.5vw;
+          gap: 1vw;
+          padding: 0vw 0 10vw;
           li {
             height: 0;
             list-style: none;
             padding: 0;
             font-size: 1vw;
             img {
-              width: 1.2vw;
+              width: 7vw;
               border-radius: 5px;
             }
             p {
-              position: relative;
-              font-size: 2vw;
-              line-height: 0.2;
-              right: 0.3vw;
+              display: none;
             }
           }
         }
@@ -2004,19 +1896,21 @@ header {
         p,
         b {
           color: $Bread;
-          font-size: 1.5vw;
+          font-size: 4.5vw;
+          line-height: 1.3;
         }
         b {
           text-transform: uppercase;
         }
   
         ul {
-          padding-left: 2vw;
+          padding-left: 4vw;
           li,
           b {
             color: $Bread;
             padding-bottom: 1vw;
-            font-size: 0.8vw;
+            font-size: 3vw;
+            line-height: 1.5;
           }
           li {
             list-style: disc outside none;
@@ -2027,7 +1921,7 @@ header {
         span {
           section:nth-child(2),
           section:nth-child(3) {
-            padding-top: 0.5vw;
+            padding-top: 4vw;
           }
         }
         .Grid {
@@ -2035,7 +1929,7 @@ header {
           height: auto;
           padding: 0vw 1vw;
           display: grid;
-          gap: 0.5vw;
+          gap: 4vw;
           img {
             width: 100%;
             cursor: pointer;
@@ -2057,12 +1951,12 @@ header {
               height: auto;
               vertical-align: top;
               transition: 0.5s;
-              opacity: 0;
+              opacity: 1;
               &.Disapear {
                 position: absolute;
                 top: 0;
                 left: 0;
-                opacity: 1;
+                opacity: 0;
               }
   
               &.MediumSize {
@@ -2078,10 +1972,10 @@ header {
           }
         }
         .Grid2 {
-          grid-template-columns: 1fr 1fr;
+          grid-template-columns: 1fr;
         }
         .Grid3 {
-          grid-template-columns: 1fr 1fr 1fr;
+          grid-template-columns: 1fr;
         }
         .Border {
           img {
@@ -2206,10 +2100,11 @@ header {
               .Bold {
                 color: $Bread;
                 font-weight: bold;
+                font-size: 4.5vw;
               }
               .Small {
                 color: $Bread;
-                font-size: 3vw;
+                font-size: 3.5vw;
               }
             }
           }
@@ -2288,6 +2183,7 @@ header {
     background-size: cover;
     background-attachment: fixed;
     padding-top: 15vw;
+    padding-bottom: 30vw;
     width: 100vw;
     display: flex;
     align-items: center;
@@ -2297,10 +2193,10 @@ header {
       display: none;
     }
     main {
-      background-color: $DarkGreen;
-      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+      background-color: rgba(255, 255, 255, 0.405);
+      background: linear-gradient(180deg, $DarkGreen 0%,$Green 100%);      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
       width: 90vw;
-      padding: 3vw 4vw 10vw;
+      padding: 3vw 4vw 0vw;
       border-radius: 1vw;
       height: auto;
       display: flex;
@@ -2453,7 +2349,7 @@ header {
       form {
         transform: scale(90%);
         width: 100vw;
-        padding: 10vw 10vw 20vw;
+        padding: 0vw 10vw 10vw;
         display: flex;
         gap: 5vw;
         flex-direction: column;
