--- a/src/App.scss
+++ b/src/App.scss
@@ -669,6 +669,7 @@ header {
         }
       }
       .Grid {
+        position: relative;
         width: 100%;
         height: auto;
         padding: 0vw 1vw;
