--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 //COLOR MODS
-$Spot: rgb(221, 252, 223);
-$SpotDark: rgb(221, 252, 223);
+$Spot: rgba(221, 252, 223, 0.99);
+$SpotDark: rgba(221, 252, 223, 0.99);
 $Green: #3f5c40;
 $DarkGreen: #1e301e;
 $Bread: rgb(109, 102, 102);
@@ -49,6 +49,34 @@ h5 {
   text-align: center;
   line-height: 8;
   color: black;
+}
+
+.scroll-to-top-button {
+  position: fixed;
+  right: 1vw;
+  bottom: -5vw;
+
+  padding: 1vw;
+  border-radius: 100%;
+
+  color: $Spot;
+  background-color: $Green;
+  font-size: 1vw;
+  font-weight: bold;
+  border: solid 2px $Green;
+  outline-offset: -5px;
+  cursor: pointer;
+  transition: 0.5s;
+
+  &:hover {
+    outline: 5px solid $Green;
+    outline-offset: 5px;
+  }
+
+  &.visible {
+    bottom: 1vw;
+    transition: 0.1s;
+  }
 }
 
 #PageAnimation {
@@ -110,10 +138,13 @@ header {
   justify-content: space-between;
   padding: 2vw 5vw;
   z-index: 9999999;
+
   &.HomePage {
     .st0 {
       fill: $Spot;
       mix-blend-mode: difference;
+      -moz-mix-blend-mode: difference;
+      -webkit-mix-blend-mode: difference;
     }
     .st1 {
       fill: $DarkGreen;
@@ -124,11 +155,15 @@ header {
     .st5 {
       fill: $Spot;
       mix-blend-mode: difference;
+      -moz-mix-blend-mode: difference;
+      -webkit-mix-blend-mode: difference;
     }
     .st9 {
       path {
         fill: $SpotDark;
         mix-blend-mode: difference;
+        -moz-mix-blend-mode: difference;
+        -webkit-mix-blend-mode: difference;
       }
     }
   }
@@ -151,6 +186,8 @@ header {
           font-weight: 800;
           position: relative;
           mix-blend-mode: difference;
+          -moz-mix-blend-mode: difference;
+          -webkit-mix-blend-mode: difference;
 
           cursor: pointer;
 
@@ -187,10 +224,14 @@ header {
   .st0 {
     fill: $Green;
     mix-blend-mode: normal;
+    -moz-mix-blend-mode: normal;
+    -webkit-mix-blend-mode: normal;
   }
   .st1 {
     fill: black;
     mix-blend-mode: normal;
+    -moz-mix-blend-mode: normal;
+    -webkit-mix-blend-mode: normal;
   }
   .st4 {
     fill: $Green;
@@ -198,11 +239,15 @@ header {
   .st5 {
     fill: black;
     mix-blend-mode: normal;
+    -moz-mix-blend-mode: normal;
+    -webkit-mix-blend-mode: normal;
   }
   .st9 {
     path {
       fill: black;
       mix-blend-mode: normal;
+      -moz-mix-blend-mode: normal;
+      -webkit-mix-blend-mode: normal;
     }
   }
   // #endregion
@@ -395,12 +440,17 @@ header {
     display: none;
   }
   small {
+    color: $Bread;
     position: absolute;
+    text-align: center;
     font-size: 1vw;
     font-style: italic;
     left: 50%;
-    bottom: 4vh;
+    bottom: 2.5vh;
     transform: translateX(-50%);
+    mix-blend-mode: difference;
+    -moz-mix-blend-mode: difference;
+    -webkit-mix-blend-mode: difference;
   }
 }
 
@@ -666,7 +716,6 @@ header {
         }
         li {
           list-style: disc outside none;
-          text-transform: capitalize;
         }
       }
 
@@ -1519,6 +1568,23 @@ header {
     }
   }
 
+  .scroll-to-top-button {
+    right: 1vw;
+    bottom: -10vw;
+
+    padding: 2vw;
+
+    font-size: 2.5vw;
+
+    &:hover {
+      outline: none;
+    }
+
+    &.visible {
+      bottom: 1vw;
+    }
+  }
+
   header {
     padding: 2vw 5vw 2vw 5vw;
     z-index: 5;
@@ -1561,10 +1627,14 @@ header {
       .st0 {
         fill: $Green;
         mix-blend-mode: normal;
+        -moz-mix-blend-mode: normal;
+        -webkit-mix-blend-mode: normal;
       }
       .st1 {
         fill: black;
         mix-blend-mode: normal;
+        -moz-mix-blend-mode: normal;
+        -webkit-mix-blend-mode: normal;
       }
       .st4 {
         fill: $Green;
@@ -1572,11 +1642,15 @@ header {
       .st5 {
         fill: black;
         mix-blend-mode: normal;
+        -moz-mix-blend-mode: normal;
+        -webkit-mix-blend-mode: normal;
       }
       .st9 {
         path {
           fill: black;
           mix-blend-mode: normal;
+          -moz-mix-blend-mode: normal;
+          -webkit-mix-blend-mode: normal;
         }
       }
       /* #endregion */
@@ -1598,6 +1672,8 @@ header {
             position: relative;
             a {
               mix-blend-mode: normal;
+              -moz-mix-blend-mode: normal;
+              -webkit-mix-blend-mode: normal;
               text-transform: uppercase;
               font-size: 8vw;
               color: black;
@@ -1631,10 +1707,14 @@ header {
       .st0 {
         fill: white;
         mix-blend-mode: normal;
+        -moz-mix-blend-mode: normal;
+        -webkit-mix-blend-mode: normal;
       }
       .st1 {
         fill: white;
         mix-blend-mode: normal;
+        -moz-mix-blend-mode: normal;
+        -webkit-mix-blend-mode: normal;
       }
       .st4 {
         fill: white;
@@ -1642,11 +1722,15 @@ header {
       .st5 {
         fill: white;
         mix-blend-mode: normal;
+        -moz-mix-blend-mode: normal;
+        -webkit-mix-blend-mode: normal;
       }
       .st9 {
         path {
           fill: white;
           mix-blend-mode: normal;
+          -moz-mix-blend-mode: normal;
+          -webkit-mix-blend-mode: normal;
         }
       }
       /* #endregion */
@@ -1712,6 +1796,8 @@ header {
           position: relative;
           a {
             mix-blend-mode: normal;
+            -moz-mix-blend-mode: normal;
+            -webkit-mix-blend-mode: normal;
             text-transform: uppercase;
             font-size: 5vw;
             color: white;
@@ -2296,7 +2382,7 @@ header {
             text-align: center;
             line-height: 1.5;
           }
-          p{
+          p {
             padding: 0 4vw;
           }
           span {
@@ -2607,6 +2693,24 @@ header {
     }
   }
 
+  .scroll-to-top-button {
+    right: 2vw;
+    bottom: -15vw;
+
+    padding: 3vw;
+
+    font-size: 5vw;
+
+    &:hover {
+      outline: none;
+    }
+
+    &.visible {
+      bottom: 2vw;
+    }
+  }
+
+
   header {
     padding: 2vw 5vw 2vw 5vw;
     z-index: 5;
@@ -2649,10 +2753,14 @@ header {
       .st0 {
         fill: $Green;
         mix-blend-mode: normal;
+        -moz-mix-blend-mode: normal;
+        -webkit-mix-blend-mode: normal;
       }
       .st1 {
         fill: black;
         mix-blend-mode: normal;
+        -moz-mix-blend-mode: normal;
+        -webkit-mix-blend-mode: normal;
       }
       .st4 {
         fill: $Green;
@@ -2660,11 +2768,15 @@ header {
       .st5 {
         fill: black;
         mix-blend-mode: normal;
+        -moz-mix-blend-mode: normal;
+        -webkit-mix-blend-mode: normal;
       }
       .st9 {
         path {
           fill: black;
           mix-blend-mode: normal;
+          -moz-mix-blend-mode: normal;
+          -webkit-mix-blend-mode: normal;
         }
       }
       /* #endregion */
@@ -2686,6 +2798,8 @@ header {
             position: relative;
             a {
               mix-blend-mode: normal;
+              -moz-mix-blend-mode: normal;
+              -webkit-mix-blend-mode: normal;
               text-transform: uppercase;
               font-size: 10vw;
               color: black;
@@ -2719,10 +2833,14 @@ header {
       .st0 {
         fill: white;
         mix-blend-mode: normal;
+        -moz-mix-blend-mode: normal;
+        -webkit-mix-blend-mode: normal;
       }
       .st1 {
         fill: white;
         mix-blend-mode: normal;
+        -moz-mix-blend-mode: normal;
+        -webkit-mix-blend-mode: normal;
       }
       .st4 {
         fill: white;
@@ -2730,11 +2848,15 @@ header {
       .st5 {
         fill: white;
         mix-blend-mode: normal;
+        -moz-mix-blend-mode: normal;
+        -webkit-mix-blend-mode: normal;
       }
       .st9 {
         path {
           fill: white;
           mix-blend-mode: normal;
+          -moz-mix-blend-mode: normal;
+          -webkit-mix-blend-mode: normal;
         }
       }
       /* #endregion */
@@ -2800,6 +2922,8 @@ header {
           position: relative;
           a {
             mix-blend-mode: normal;
+            -moz-mix-blend-mode: normal;
+            -webkit-mix-blend-mode: normal;
             text-transform: uppercase;
             font-size: 10vw;
             color: white;
